@@ -16,39 +16,39 @@ import com.obsidiandynamics.zerolog.*;
 
 public final class JacksonPayloadSerializationTest {
   private static final Zlg zlg = Zlg.forDeclaringClass().get();
-  
+
   private static ObjectMapper createObjectMapper() {
     return new ObjectMapper().registerModule(new JacksonPayloadModule());
   }
-  
+
   private static void logEncoded(String encoded) {
     zlg.t("encoded %s", z -> z.arg(encoded));
   }
-  
+
   private static final class TestClass {
     @JsonProperty
     private final String a;
 
     @JsonProperty
     private final int b;
-    
+
     TestClass(@JsonProperty("a") String a, @JsonProperty("b") int b) {
       this.a = a;
       this.b = b;
     }
   }
-  
+
   @Rule 
   public ExpectedException thrown = ExpectedException.none();
-  
+
   @Test
   public void testScalar() throws IOException {
     final var mapper = createObjectMapper();
     final var p = Payload.pack("scalar");
-    
+
     final var encoded = mapper.writeValueAsString(p);
     logEncoded(encoded);
-    
+
     final var d = mapper.readValue(encoded, Payload.class);
     assertEquals(p, d);
   }
@@ -58,10 +58,10 @@ public final class JacksonPayloadSerializationTest {
     final var mapper = createObjectMapper();
     final var written = new long[] {0, 1, 3};
     final var p = Payload.pack(written);
-    
+
     final var encoded = mapper.writeValueAsString(p);
     logEncoded(encoded);
-    
+
     final var d = mapper.readValue(encoded, Payload.class);
     final var read = d.<long[]>unpack();
     assertArrayEquals(written, read);
@@ -71,13 +71,13 @@ public final class JacksonPayloadSerializationTest {
   public void testMap() throws IOException {
     final var mapper = createObjectMapper();
     final var map = new TreeMap<String, List<String>>();
-    map.put("a", Arrays.asList("a", "A"));
-    map.put("b", Arrays.asList("a", "B"));
+    map.put("a", List.of("a", "A"));
+    map.put("b", List.of("a", "B"));
     final var p = Payload.pack(map);
-    
+
     final var encoded = mapper.writeValueAsString(p);
     logEncoded(encoded);
-    
+
     final var d = mapper.readValue(encoded, Payload.class);
     assertEquals(p, d);
   }
@@ -87,21 +87,21 @@ public final class JacksonPayloadSerializationTest {
     final var mapper = createObjectMapper();
     final var written = new TestClass("someString", 42);
     final var p = Payload.pack(written);
-    
+
     final var encoded = mapper.writeValueAsString(p);
     logEncoded(encoded);
-    
+
     final var d = mapper.readValue(encoded, Payload.class);
     final var read = d.<TestClass>unpack();
     assertEquals(written.a, read.a);
     assertEquals(written.b, read.b);
   }
-  
+
   @Test
   public void testInvalidClass() throws IOException {
     final var mapper = createObjectMapper();
     final var encoded = "{\"@payloadClass\":\"com.foo.bar.Baz\",\"@payload\":[0,1,3]}";
-    
+
     thrown.expect(PayloadDeserializationException.class);
     thrown.expectCause(IsInstanceOf.instanceOf(ClassNotFoundException.class));
     mapper.readValue(encoded, Payload.class);
