@@ -40,23 +40,23 @@ public final class KafkaLedger implements Ledger {
   private static final long OFFSET_DRAIN_CHECK_INTERVAL_MILLIS = 10;
 
   private final Kafka<String, Message> kafka;
-  
+
   private final String topic;
 
   private final Zlg zlg;
 
   /** A process-unique handle to the codec that's held by the {@link CodecRegistry}. */
   private final String codecLocator;
-  
+
   /** Prevents deregistering the codec while new consumers are being attached to the ledger. */
   private final ReentrantReadWriteLock codecLock = new ReentrantReadWriteLock();
 
   private final ConsumerPipeConfig consumerPipeConfig;
-  
+
   private final int maxConsumerPipeYields;
-  
+
   private final int pollTimeout;
-  
+
   private final SpotterConfig spotterConfig;
 
   private final Producer<String, Message> producer;
@@ -66,31 +66,29 @@ public final class KafkaLedger implements Ledger {
   private final List<AsyncReceiver<String, Message>> receivers = new CopyOnWriteArrayList<>();
 
   private final List<ConsumerPipe<String, Message>> consumerPipes = new CopyOnWriteArrayList<>();
-  
-  private final List<ShardedFlow> flows = new CopyOnWriteArrayList<>();
-  
+
   private final boolean printConfig;
-  
+
   private final int ioAttempts;
-  
+
   private final boolean drainConfirmations;
-  
+
   private final int drainConfirmationsTimeout;
-  
+
   private final boolean enforceMonotonicity;
-  
+
   private final WorkerThread retryThread;
-  
+
   private static final class RetryTask {
     final Message message;
     final AppendCallback callback;
-    
+
     RetryTask(Message message, AppendCallback callback) {
       this.message = message;
       this.callback = callback;
     }
   }
-  
+
   private final NodeQueue<RetryTask> retryQueue = new NodeQueue<>();
   private final QueueConsumer<RetryTask> retryQueueConsumer = retryQueue.consumer();
 
@@ -111,40 +109,40 @@ public final class KafkaLedger implements Ledger {
         return newOffset > offset;
       }
     }
-    
+
     final Object lock = new Object();
-    
+
     /** The total number of records that have been queued through the consumer pipeline that are yet to
      *  be considered for processing. (Some of these records may be discarded when they emerge from the
      *  pipeline.) */
     int queuedRecords;
-    
+
     /** Offsets that have been marked as confirmed (via the {@link Flow}) instances, being one higher than
      *  the offset of the processed message. This map is cleared when the offsets are eventually committed.
      *  (This occurs in the consumer thread.) */
     Map<TopicPartition, OffsetAndMetadata> offsetsConfirmed = new HashMap<>();
-    
+
     /** Pending offsets for messages that have been accepted for processing, but haven't yet been confirmed.
      *  Entries are removed as offsets are confirmed; eventually when the map is emptied, the ledger is
      *  considered to be drained. */
     final Map<Integer, Long> offsetsPending = new HashMap<>();
-    
+
     /** A perpetual tracking of all offsets that have been processed, ensuring monotonicity. This map
      *  is never cleared. (Set to {@code null} if monotonicity is not being enforced.) */
     final Map<Integer, MutableOffset> offsetsProcessed;
-    
+
     /** Partitions that have been assigned to this consumer, set by the {@code onPartitionsRevoked()} callback. */
-    Set<Integer> assignedPartitions = Collections.emptySet();
-    
+    Set<Integer> assignedPartitions = Set.of();
+
     /** Partitions that are still held by this consumer. Differs from {@link #assignedPartitions} in that
      *  it doesn't get cleared in the {@code onPartitionsRevoked()} callback and persists until the
      *  {@code onPartitionsAssigned()} callback. */
-    Set<Integer> heldPartitions = Collections.emptySet();
-    
+    Set<Integer> heldPartitions = Set.of();
+
     ConsumerState(boolean enforceMonotonicity) {
       offsetsProcessed = enforceMonotonicity ? new HashMap<>() : null;
     }
-    
+
     MutableOffset processedOffsetForPartition(int partition) {
       return offsetsProcessed.computeIfAbsent(partition, __ -> new MutableOffset());
     }
@@ -154,7 +152,7 @@ public final class KafkaLedger implements Ledger {
   private final Map<Integer, ConsumerState> consumerStates = new ConcurrentHashMap<>();
 
   private final AtomicInteger nextHandlerId = new AtomicInteger();
-  
+
   private volatile boolean disposing;
 
   public KafkaLedger(KafkaLedgerConfig config) {
@@ -200,14 +198,14 @@ public final class KafkaLedger implements Ledger {
         .with(ProducerConfig.MAX_IN_FLIGHT_REQUESTS_PER_CONNECTION, 1)
         .with(ProducerConfig.MAX_BLOCK_MS_CONFIG, 3600 * 1000)
         .build();
-    
+
     if (printConfig) kafka.describeProducer(zlg::i, producerDefaults, producerOverrides);
     producer = kafka.getProducer(producerDefaults, producerOverrides);
     final var producerPipeThreadName = ProducerPipe.class.getSimpleName() + "-" + randomThreadId + "-[" + topic + "]";
     final var producerPipeConfig = config.getProducerPipeConfig();
     producerPipe = new ProducerPipe<>(producerPipeConfig, producer, producerPipeThreadName, zlg::w);
   }
-  
+
   private void onRetry(WorkerThread t) throws InterruptedException {
     final var retryTask = retryQueueConsumer.poll();
     if (retryTask != null) {
@@ -216,7 +214,7 @@ public final class KafkaLedger implements Ledger {
       Thread.sleep(RETRY_BACKOFF_MILLIS);
     }
   }
-  
+
   @Override
   public Object attach(MessageHandler handler) {
     mustExist(handler, "Handler cannot be null");
@@ -240,7 +238,7 @@ public final class KafkaLedger implements Ledger {
     } else {
       autoOffsetReset = OffsetResetStrategy.LATEST.name().toLowerCase();
     }
-    
+
     // may be user-specified in config
     final var consumerDefaults = new PropsBuilder()
         .withSystemDefault(ConsumerConfig.SESSION_TIMEOUT_MS_CONFIG, 6_000)
@@ -258,7 +256,7 @@ public final class KafkaLedger implements Ledger {
         .with(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, KafkaMessageDeserializer.class.getName())
         .with(CodecRegistry.CONFIG_CODEC_LOCATOR, codecLocator)
         .build();
-    
+
     if (printConfig) kafka.describeConsumer(zlg::i, consumerDefaults, consumerOverrides);
     final var consumer = kafka.getConsumer(consumerDefaults, consumerOverrides);
     final ConsumerState consumerState;
@@ -267,9 +265,9 @@ public final class KafkaLedger implements Ledger {
     } else {
       consumerState = null;
     }
-    
+
     final var spotter = new Spotter(spotterConfig);
-    
+
     new Retry()
     .withAttempts(ioAttempts)
     .withFaultHandler(zlg::w)
@@ -279,11 +277,11 @@ public final class KafkaLedger implements Ledger {
       if (groupId != null) {
         final var rebalanceListener = new ConsumerRebalanceListener() {
           final Predicate<TopicPartition> topicFilter = fieldPredicate(TopicPartition::topic, topic::equals);
-          
+
           @Override
           public void onPartitionsRevoked(Collection<TopicPartition> partitions) {
             synchronized (consumerState.lock) {
-              consumerState.assignedPartitions = Collections.emptySet();
+              consumerState.assignedPartitions = Set.of();
             }
 
             if (drainConfirmations) {
@@ -298,16 +296,16 @@ public final class KafkaLedger implements Ledger {
             final var assignedPartitions = partitions.stream()
                 .filter(topicFilter)
                 .collect(Collectors.toSet());
-            
+
             final var assignedPartitionIndexes = assignedPartitions.stream()
                 .map(TopicPartition::partition)
                 .collect(Collectors.toSet());
-            
+
             synchronized (consumerState.lock) {
               consumerState.assignedPartitions = assignedPartitionIndexes;
               consumerState.heldPartitions = assignedPartitionIndexes;
             }
-            
+
             // add/remove lots from the spotter in accordance with our newly assigned partitions
             final var lots = spotter.getLots();
             for (var shard : lots.keySet()) {
@@ -342,9 +340,8 @@ public final class KafkaLedger implements Ledger {
     if (groupId != null) {
       handlerId = nextHandlerId.getAndIncrement();
       consumerStates.put(handlerId, consumerState);
-      final var flow = new ShardedFlow(groupId);
+      final var flow = new ShardedFlow();
       retention = flow;
-      flows.add(flow);
     } else {
       handlerId = null;
       retention = NopRetention.getInstance();
@@ -372,10 +369,10 @@ public final class KafkaLedger implements Ledger {
     final var threadName = KafkaLedger.class.getSimpleName() + "-" + randomThreadId + "-topic[" + topic + "]-group[" + groupId + "]";
     final var receiver = new AsyncReceiver<>(consumer, pollTimeout, threadName, recordHandler, zlg::w);
     receivers.add(receiver);
-    
+
     return handlerId;
   }
-  
+
   static void queueRecords(Consumer<String, Message> consumer, 
                            ConsumerState consumerState,
                            ConsumerPipe<String, Message> consumerPipe,
@@ -396,15 +393,15 @@ public final class KafkaLedger implements Ledger {
     } else {
       queueBatch = true;
     }
-    
+
     if (queueBatch) {
       for (var yields = 0;;) {
         final var enqueued = consumerPipe.receive(records);
- 
+
         if (consumerState != null) {
           commitOffsets(consumer, consumerState, zlg);
         }
- 
+
         if (enqueued) {
           break;
         } else if (yields < maxConsumerPipeYields) {
@@ -416,11 +413,11 @@ public final class KafkaLedger implements Ledger {
       }
     }
   }
-  
+
   static Runnable sleepFor(long sleepMillis) {
     return () -> Threads.sleep(sleepMillis);
   }
-  
+
   boolean isDisposing() {
     return disposing;
   }
@@ -430,11 +427,10 @@ public final class KafkaLedger implements Ledger {
                            BooleanSupplier isDisposingCheck, Zlg zlg) {
     final var drainUntilTime = System.currentTimeMillis() + drainTimeoutMillis;
     while (! isDisposingCheck.getAsBoolean()) {
-      final boolean allPendingOffsetsConfirmed;
       final Map<TopicPartition, OffsetAndMetadata> offsetsConfirmedSnapshot;
       synchronized (consumerState.lock) {
         if (consumerState.queuedRecords == 0) {
-          allPendingOffsetsConfirmed = consumerState.offsetsPending.isEmpty();
+          final var allPendingOffsetsConfirmed = consumerState.offsetsPending.isEmpty();
           if (allPendingOffsetsConfirmed) {
             offsetsConfirmedSnapshot = consumerState.offsetsConfirmed;
             consumerState.offsetsConfirmed = new HashMap<>(consumerState.offsetsConfirmed.size());
@@ -444,12 +440,11 @@ public final class KafkaLedger implements Ledger {
           }
         } else {
           zlg.d("Pipeline backlogged: %,d record(s) queued", z -> z.arg(consumerState.queuedRecords));
-          allPendingOffsetsConfirmed = false;
           offsetsConfirmedSnapshot = null;
         }
       }
 
-      if (allPendingOffsetsConfirmed) {
+      if (offsetsConfirmedSnapshot != null) {
         zlg.d("All offsets confirmed: %s", z -> z.arg(map(ref(offsetsConfirmedSnapshot), KafkaLedger::getOriginalOffsets)));
         if (! offsetsConfirmedSnapshot.isEmpty()) {
           new Retry()
@@ -471,7 +466,7 @@ public final class KafkaLedger implements Ledger {
       }
     }
   }
-  
+
   /**
    *  For a given map of confirmed offsets (which are one greater than the message offsets), produces a map 
    *  of partitions to the original message offsets.
@@ -486,7 +481,7 @@ public final class KafkaLedger implements Ledger {
     }
     return prev;
   }
-  
+
   private static SortedMap<Integer, Long> sortedCopy(Map<Integer, Long> original) {
     final var sorted = new TreeMap<Integer, Long>();
     for (var entry : original.entrySet()) {
@@ -501,7 +496,7 @@ public final class KafkaLedger implements Ledger {
       if (! consumerState.offsetsConfirmed.isEmpty()) {
         confirmedSnapshot = consumerState.offsetsConfirmed;
         consumerState.offsetsConfirmed = new HashMap<>(confirmedSnapshot.size());
-        
+
         if (consumerState.offsetsProcessed != null) {
           for (var partitionOffset : confirmedSnapshot.entrySet()) {
             final var partition = partitionOffset.getKey().partition();
@@ -521,7 +516,7 @@ public final class KafkaLedger implements Ledger {
                            (offsets, exception) -> maybeLogException(zlg, exception, "Error committing offsets %s", offsets));
     }
   }
-  
+
   private static Map<Integer, Long> simplifyOffsetsMap(Map<TopicPartition, OffsetAndMetadata> offsets) {
     final var simplified = new TreeMap<Integer, Long>();
     for (var entry : offsets.entrySet()) {
@@ -550,7 +545,7 @@ public final class KafkaLedger implements Ledger {
           } else {
             accepted = true;
           }
-          
+
           if (accepted) {
             consumerState.offsetsPending.put(partition, offset);
           }
@@ -562,7 +557,7 @@ public final class KafkaLedger implements Ledger {
     } else {
       accepted = true;
     }
-    
+
     if (accepted) {
       final var messageId = new DefaultMessageId(partition, offset);
       final var message = record.value();
@@ -649,7 +644,6 @@ public final class KafkaLedger implements Ledger {
     .add(receivers)
     .add(consumerPipes)
     .add(producerPipe)
-    .add(flows)
     .terminate()
     .joinSilently();
     codecLock.writeLock().lock();
