@@ -8,40 +8,40 @@ import com.obsidiandynamics.zerolog.*;
 
 public final class Spotter {
   private static final int INITIAL_LOTS = 1;
-  
+
   private final long timeout;
-  
+
   private final long gracePeriod;
-  
+
   private final Zlg zlg;
-  
+
   private Lot[] lots = new Lot[INITIAL_LOTS];
-  
+
   public Spotter(SpotterConfig config) {
     mustExist(config, "Config cannot be null").validate();
     timeout = config.getTimeout();
     gracePeriod = config.getGracePeriod();
     zlg = config.getZlg();
   }
-  
+
   private Lot getOrCreateLot(int shard) {
     if (shard >= lots.length) {
       final var newLots = new Lot[(shard + 1) * 2];
       System.arraycopy(lots, 0, newLots, 0, lots.length);
       lots = newLots;
     }
-    
+
     if (lots[shard] == null) {
       lots[shard] = new Lot(shard);
     }
-    
+
     return lots[shard];
   }
-  
+
   public Lot addLot(int shard) {
     return getOrCreateLot(shard);
   }
-  
+
   public Lot removeLot(int shard) {
     if (shard < lots.length) {
       final var existing = lots[shard];
@@ -51,33 +51,33 @@ public final class Spotter {
       return null;
     }
   }
-  
+
   public boolean tryAdvance(int shard, long offset) {
     return getOrCreateLot(shard).tryAdvance(offset);
   }
-  
+
   private List<Lot> getLapsedLots(long lastAdvancedThreshold) {
     var lapsedLots = (List<Lot>) null;
-    
+
     for (var lot : lots) {
       if (lot != null && lot.getLastAdvancedTime() < lastAdvancedThreshold) {
         if (lapsedLots == null) lapsedLots = new ArrayList<>();
         lapsedLots.add(lot);
       }
     }
-    
-    return lapsedLots != null ? lapsedLots : Collections.emptyList();
+
+    return lapsedLots != null ? lapsedLots : List.of();
   }
-  
+
   public void printParkedLots() {
     if (zlg.isEnabled(LogLevel.INFO)) {
       final var timeoutThreshold = System.currentTimeMillis() - timeout;
       final var lapsedLots = getLapsedLots(timeoutThreshold);
-      
+
       if (! lapsedLots.isEmpty()) {
         var parkedLots = (List<String>) null;
         var existing = 0;
-        
+
         final var graceThreshold = timeoutThreshold - gracePeriod;
         for (var lapsedLot : lapsedLots) {
           if (! lapsedLot.isLogPrinted() && lapsedLot.getLastAdvancedTime() < graceThreshold) {
@@ -102,7 +102,7 @@ public final class Spotter {
       }
     }
   }
-  
+
   public Map<Integer, Lot> getLots() {
     final var lotsMap = new LinkedHashMap<Integer, Lot>(lots.length, 1f);
     for (var lot : lots) {
